--- a/Userland/Makefile.inc
+++ b/Userland/Makefile.inc
@@ -4,6 +4,9 @@ LD=ld
 AR=ar
 ASM=nasm
 
-GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -fdiagnostics-color=always
+EGCCFLAGS=
+GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -fdiagnostics-color=always $(EGCCFLAGS)
 ARFLAGS=rvs
 ASMFLAGS=-felf64
+ELDFLAGS=
+LDFLAGS=--warn-common -z max-page-size=0x1000 $(ELDFLAGS)
