Beginnings of a command handler

--- a/Userland/SampleCodeModule/Makefile
+++ b/Userland/SampleCodeModule/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 MODULE=0000-sampleCodeModule.bin
-SOURCES=$(wildcard [^_]*.c) $(wildcard nstdlib/*.c) $(wildcard window/*.c) $(wildcard shell/*.c) $(wildcard snake/*.c)
+SOURCES=$(wildcard [^_]*.c) $(wildcard nstdlib/*.c) $(wildcard window/*.c) $(wildcard shell/*.c) $(wildcard shell/commandHandler/*.c) $(wildcard snake/*.c) $(wildcard moduleSelector/*.c)
 SOURCES_ASM=$(wildcard *.asm)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
