Deberia funcionar un piano basico

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "files.associations": {
+        "*.rmd": "markdown",
+        "sound.h": "c"
+    },
+    "workbench.colorTheme": "Monokai"
 }
