I do indeed wanna know

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "editor.formatOnSave": true,
     "files.associations": {
         "*.rmd": "markdown",
-        "sound.h": "c"
+        "sound.h": "c",
+        "piano.h": "c"
     },
 }
