--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "editor.formatOnSave": true,
-    "files.associations": {
-        "*.rmd": "markdown",
-        "sound.h": "c",
-        "piano.h": "c"
-    },
+    "editor.formatOnSave": true
 }
