--- a/Kernel/Makefile.inc
+++ b/Kernel/Makefile.inc
@@ -4,7 +4,7 @@ AR=ar
 ASM=nasm
 
 EGCCFLAGS=
-GCCFLAGS=-m64 -fno-exceptions -fno-asynchronous-unwind-tables -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -mno-red-zone -Wall -ffreestanding -nostdlib -fno-common -std=c99 -fdiagnostics-color=always $(EGCCFLAGS)
+GCCFLAGS=-m64 -fno-exceptions -fno-asynchronous-unwind-tables -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -mno-red-zone -Wall -ffreestanding -nostdlib -fno-common -fno-pic -std=c99 -fdiagnostics-color=always $(EGCCFLAGS)
 ARFLAGS=rvs
 ASMFLAGS=-felf64
 ELDFLAGS=
