--- a/Userland/Makefile.inc
+++ b/Userland/Makefile.inc
@@ -5,7 +5,7 @@ AR=ar
 ASM=nasm
 
 EGCCFLAGS=
-GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -fdiagnostics-color=always $(EGCCFLAGS)
+GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -fno-pic -fdiagnostics-color=always $(EGCCFLAGS)
 ARFLAGS=rvs
 ASMFLAGS=-felf64
 ELDFLAGS=
