--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,20 @@
             "type": "gdb",
             "request": "attach",
             "name": "Attach to QEMU",
-            "executable": "./Image/packedKernel.bin",
             "target": ":1234",
+            "pathSubstitutions": {
+                "/root": "${workspaceRoot}"
+            },
             "remote": true,
             "cwd": "${workspaceRoot}",
             "valuesFormatting": "parseText",
-            "preLaunchTask": "Build and execute in debug mode",
-            "printCalls": true
+            "printCalls": true,
+            "autorun": [
+                "add-symbol-file ./Image/kernel.elf 0x00100000",
+                "add-symbol-file ./Image/0000-sampleCodeModule.elf 0x00400000",
+                "add-symbol-file ./Image/0002-tomyland.elf 0x00600000",
+            ],
+            "stopAtConnect": true
         }
     ]
 }
