--- a/Image/Makefile
+++ b/Image/Makefile
@@ -31,6 +31,6 @@ $(QCOW2): $(IMG)
 	qemu-img convert -f raw -O qcow2 $(IMG) $(QCOW2)
 
 clean:
-	rm -rf $(IMG) $(VMDK) $(QCOW2) *.bin
+	rm -rf $(IMG) $(VMDK) $(QCOW2) *.bin *.elf
 
 .PHONY: all clean
