--- a/Userland/tomyland/Makefile
+++ b/Userland/tomyland/Makefile
@@ -8,7 +8,7 @@ OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 LOADERSRC=loader.asm
 
 LOADEROBJECT=$(LOADERSRC:.asm=.o)
-STATICLIBS=
+STATICLIBS=$(wildcard ../../Global/string/*.o)
 
 all: log $(MODULE)
 
