--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,9 +17,9 @@
             "valuesFormatting": "parseText",
             "printCalls": true,
             "autorun": [
-                "add-symbol-file ./Image/kernel.elf 0x00100000",
-                "add-symbol-file ./Image/0000-sampleCodeModule.elf 0x00400000",
-                "add-symbol-file ./Image/0002-tomyland.elf 0x00600000",
+                "add-symbol-file /tmp/retos/kernel.elf 0x00100000",
+                "add-symbol-file /tmp/retos/0000-sampleCodeModule.elf 0x00400000",
+                "add-symbol-file /tmp/retos/0002-tomyland.elf 0x00600000",
             ],
             "stopAtConnect": true
         }
