basic module cat

--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -2,7 +2,7 @@ include Makefile.inc
 
 SAMPLE_DATA=0001-sampleDataModule.bin
 
-all: sampleCodeModule tomyland sampleDataModule
+all: sampleCodeModule tomyland cat sampleDataModule
 
 sampleCodeModule:
 	cd SampleCodeModule; make
@@ -10,13 +10,17 @@ sampleCodeModule:
 tomyland:
 	cd tomyland; make
 
+cat:
+	cd cat; make
+
 sampleDataModule:
 	whoami >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
 
 clean:
 	cd SampleCodeModule; make clean
 	cd tomyland; make clean
+	cd cat; make clean
 	rm -rf *.bin
 
 
-.PHONY: sampleCodeModule tomyland all clean
+.PHONY: sampleCodeModule tomyland cat all clean
