--- a/Userland/wc/Makefile
+++ b/Userland/wc/Makefile
@@ -1,6 +1,6 @@
 include ../Makefile.inc
 
-MODULE=0003-cat
+MODULE=0003-wc
 SOURCES=$(wildcard *.c) $(wildcard lib/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 OBJECTS=$(SOURCES:.c=.o)
@@ -14,14 +14,14 @@ all: log $(MODULE)
 
 log:
 	@echo
-	@echo "\033[0;36mMAKEFILE CAT\033[0m"
+	@echo "\033[0;36mMAKEFILE WC\033[0m"
 	@echo "\tSOURCES=$(SOURCES) $(SOURCES_ASM)"
 	@echo
 
 $(MODULE): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM)
-	$(LD) $(LDFLAGS) -T cat.ld -o ../$(MODULE).bin $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
+	$(LD) $(LDFLAGS) -T wc.ld -o ../$(MODULE).bin $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
 ifneq ($(DEBUG), 0)
-	$(LD) $(LDFLAGS) -T cat.ld --oformat=elf64-x86-64 -o ../../Image/$(MODULE).elf $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
+	$(LD) $(LDFLAGS) -T wc.ld --oformat=elf64-x86-64 -o ../../Image/$(MODULE).elf $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
 endif
 
 ifneq ($(DEBUG), 0)
