--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -2,7 +2,7 @@ include Makefile.inc
 
 SAMPLE_DATA=0001-sampleDataModule.bin
 
-all: sampleCodeModule tomyland cat wc sampleDataModule
+all: sampleCodeModule tomyland cat wc filter sampleDataModule
 
 sampleCodeModule:
 	cd SampleCodeModule; make
@@ -16,6 +16,9 @@ cat:
 wc:
 	cd wc; make
 
+filter:
+	cd filter; make
+
 sampleDataModule:
 	whoami >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
 
@@ -24,7 +27,8 @@ clean:
 	cd tomyland; make clean
 	cd cat; make clean
 	cd wc; make clean
+	cd filter; make clean
 	rm -rf *.bin
 
 
-.PHONY: sampleCodeModule tomyland cat wc all clean
+.PHONY: sampleCodeModule tomyland cat wc filter all clean
