--- a/Image/Makefile
+++ b/Image/Makefile
@@ -8,7 +8,7 @@ VMDK=$(OSIMAGENAME).vmdk
 QCOW2=$(OSIMAGENAME).qcow2
 IMG=$(OSIMAGENAME).img
 KERNEL=../Kernel/kernel.bin
-USERLAND=../Userland/0000-sampleCodeModule.bin ../Userland/0001-sampleDataModule.bin ../Userland/0002-tomyland.bin ../Userland/0003-cat.bin ../Userland/0004-wc.bin ../Userland/0005-filter.bin
+USERLAND=../Userland/0000-sampleCodeModule.bin ../Userland/0001-sampleDataModule.bin ../Userland/0002-tomyland.bin ../Userland/0003-cat.bin ../Userland/0004-wc.bin ../Userland/0005-filter.bin ../Userland/0006-loop.bin
 
 PACKEDKERNEL=packedKernel.bin
 IMGSIZE=6291456
