--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "editor.formatOnSave": true,
-    "files.associations": {
-        "stdlib.h": "c",
-        "stdint.h": "c",
-        "string.h": "c"
-    }
+    "editor.formatOnSave": true
 }
