--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,9 +20,10 @@
                 "add-symbol-file /tmp/retos/kernel.elf 0x00100000",
                 "add-symbol-file /tmp/retos/0000-sampleCodeModule.elf 0x00400000",
                 "add-symbol-file /tmp/retos/0002-tomyland.elf 0x00600000",
-                "add-symbol-file /tmp/retos/0003-cat.elf 0x00700000",
-                "add-symbol-file /tmp/retos/0004-wc.elf 0x00800000",
-                "add-symbol-file /tmp/retos/0005-filter.elf 0x00900000"
+                "add-symbol-file /tmp/retos/0003-cat.elf 0x00605000",
+                "add-symbol-file /tmp/retos/0004-wc.elf 0x00610000",
+                "add-symbol-file /tmp/retos/0005-filter.elf 0x00615000",
+                "add-symbol-file /tmp/retos/0006-loop.elf 0x00620000"
             ],
             "stopAtConnect": true
         }
