grep module created

--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -2,7 +2,7 @@ include Makefile.inc
 
 SAMPLE_DATA=0001-sampleDataModule.bin
 
-all: sampleCodeModule tomyland cat wc filter loop sampleDataModule
+all: sampleCodeModule tomyland cat wc filter loop grep sampleDataModule
 
 sampleCodeModule:
 	cd SampleCodeModule; make
@@ -22,6 +22,9 @@ filter:
 loop:
 	cd loop; make
 
+grep:
+	cd grep; make
+
 sampleDataModule:
 	whoami >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
 
@@ -32,7 +35,8 @@ clean:
 	cd wc; make clean
 	cd filter; make clean
 	cd loop; make clean
+	cd grep; make clean
 	rm -rf *.bin
 
 
-.PHONY: sampleCodeModule tomyland cat wc filter loop all clean
+.PHONY: sampleCodeModule tomyland cat wc filter loop grep all clean
