--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,9 @@
                 "add-symbol-file /tmp/retos/0003-cat.elf 0x00605000",
                 "add-symbol-file /tmp/retos/0004-wc.elf 0x00610000",
                 "add-symbol-file /tmp/retos/0005-filter.elf 0x00615000",
-                "add-symbol-file /tmp/retos/0006-loop.elf 0x00620000"
+                "add-symbol-file /tmp/retos/0006-loop.elf 0x00620000",
+                "add-symbol-file /tmp/retos/0007-grep.elf 0x00625000",
+                "add-symbol-file /tmp/retos/0008-sing.elf 0x00630000"
             ],
             "stopAtConnect": true
         }
