--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -2,7 +2,7 @@ include Makefile.inc
 
 SAMPLE_DATA=0001-sampleDataModule.bin
 
-all: sampleCodeModule tomyland cat wc filter loop grep sing sampleDataModule
+all: sampleCodeModule tomyland cat wc filter loop grep sing less sampleDataModule
 
 sampleCodeModule:
 	cd SampleCodeModule; make
@@ -28,6 +28,9 @@ grep:
 sing:
 	cd sing; make
 
+less:
+	cd less; make
+
 sampleDataModule:
 	whoami >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
 
@@ -40,7 +43,8 @@ clean:
 	cd loop; make clean
 	cd grep; make clean
 	cd sing; make clean
+	cd less; make clean
 	rm -rf *.bin
 
 
-.PHONY: sampleCodeModule tomyland cat wc filter loop grep sing all clean
+.PHONY: sampleCodeModule tomyland cat wc filter loop grep sing less all clean
