Little mistakes solved, still missing support for more children

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,9 @@
                 "add-symbol-file /tmp/retos/0005-filter.elf 0x00615000",
                 "add-symbol-file /tmp/retos/0006-loop.elf 0x00620000",
                 "add-symbol-file /tmp/retos/0007-grep.elf 0x00625000",
-                "add-symbol-file /tmp/retos/0008-sing.elf 0x00630000"
+                "add-symbol-file /tmp/retos/0008-sing.elf 0x00630000",
+                "add-symbol-file /tmp/retos/0009-less.elf 0x00635000",
+                "add-symbol-file /tmp/retos/000a-phylos.elf 0x00640000"
             ],
             "stopAtConnect": true
         }
