--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -2,7 +2,7 @@ include Makefile.inc
 
 SAMPLE_DATA=0001-sampleDataModule.bin
 
-all: sampleCodeModule tomyland cat wc filter loop grep sing less phylos sampleDataModule
+all: sampleCodeModule tomyland cat wc filter loop grep sing less phylos tests sampleDataModule
 
 sampleCodeModule:
 	cd SampleCodeModule; make
@@ -34,6 +34,9 @@ less:
 phylos:
 	cd phylos; make
 
+tests:
+	cd tests; make
+
 sampleDataModule:
 	whoami >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
 
@@ -48,7 +51,8 @@ clean:
 	cd sing; make clean
 	cd less; make clean
 	cd phylos; make clean
+	cd tests; make clean
 	rm -rf *.bin
 
 
-.PHONY: sampleCodeModule tomyland cat wc filter loop grep sing less phylos all clean
+.PHONY: sampleCodeModule tomyland cat wc filter loop grep sing less phylos tests all clean
