--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "editor.formatOnSave": true,
     "files.associations": {
         "test_util.h": "c",
-        "memory.h": "c"
+        "memory.h": "c",
+        "resource.h": "c"
     }
 }
