--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "files.associations": {
         "test_util.h": "c",
         "memory.h": "c",
-        "resource.h": "c"
-    }
+        "resource.h": "c",
+        "my_lib.h": "c"
+    },
+    "workbench.colorTheme": "Monokai"
 }
