--- a/Global/Makefile
+++ b/Global/Makefile
@@ -1,6 +1,6 @@
 include Makefile.inc
 
-SOURCES=$(wildcard math/*.c) $(wildcard memory/*.c) $(wildcard stdlib/*.c) $(wildcard string/*.c) $(wildcard malloc_m/*.c)# $(wildcard folder_name/*.c)
+SOURCES=$(wildcard math/*.c) $(wildcard memory/*.c) $(wildcard stdlib/*.c) $(wildcard string/*.c) # $(wildcard folder_name/*.c)
 SOURCES_ASM=# $(wildcard asm/*.asm)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
