Doesn't always work as expected

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,6 +25,13 @@
                 // "int",
                 "-soundhw",
                 "pcspk",
+                "-netdev",
+                // "socket,id=mynet0,listen=:1234",
+                // "socket,id=mynet0,connect=:1234",
+                "user,id=mynet0,hostfwd=tcp::8080-:80",
+                // "tap,id=mynet0",
+                "-device",
+                "rtl8139,netdev=mynet0,mac=DE:00:40:AA:21:2E",
                 "-serial",
                 "stdio"
             ],
@@ -55,6 +62,13 @@
                 "512",
                 "-soundhw",
                 "pcspk",
+                "-netdev",
+                // "socket,id=mynet0,listen=:5678",
+                // "socket,id=mynet0,connect=:5678",
+                "user,id=mynet0,hostfwd=tcp::8080-:80",
+                // "tap,id=mynet0",
+                "-device",
+                "rtl8139,netdev=mynet0,mac=DE:00:40:AA:21:2E",
                 "-serial",
                 "stdio"
             ],
